[package]
name = "burn_marks"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2018"

[package.metadata.ndk]
targets = ["arm64-v8a"]
platform = 24

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quest_hook = { git = "https://github.com/StackDoubleFlow/quest-hook-rs" }
tracing-android = { git = "https://github.com/raftario/tracing-android.git" }
