[package]
name = "burn_marks"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2018"

[package.metadata.ndk]
targets = ["arm64-v8a"]
platform = 24

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
# tracing-android = { git = "https://github.com/raftario/tracing-android" }
tracing = { git = "https://github.com/tokio-rs/tracing" }

[dependencies.quest_hook]
path = "../../quest_hook_rs"
features = ["unity2019"]